--- a/index.html
+++ b/index.html
@@ -27,18 +27,27 @@
                 <div class="carousel-main" id="carouselMain">
                     <ul>
                         <li>
-                            <a href="javascript:;">
-                                <img src="img/temporary-slider.png" alt="">
+                            <a href="javascript:;" style="background: url(img/carousel/index01.png) no-repeat center; background-size: cover;">
                             </a>
                         </li>
                         <li>
-                            <a href="javascript:;">
-                                <img src="img/temporary-slider.png" alt="">
+                            <a href="javascript:;" style="background: url(img/carousel/index02.png) no-repeat center; background-size: cover;">
                             </a>
                         </li>
                         <li>
-                            <a href="javascript:;">
-                                <img src="img/temporary-slider.png" alt="">
+                            <a href="javascript:;" style="background: url(img/carousel/index03.png) no-repeat center; background-size: cover;">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="javascript:;" style="background: url(img/carousel/index04.png) no-repeat center; background-size: cover;">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="javascript:;" style="background: url(img/carousel/index05.png) no-repeat center; background-size: cover;">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="javascript:;" style="background: url(img/carousel/index06.png) no-repeat center; background-size: cover;">
                             </a>
                         </li>
                     </ul>
@@ -47,6 +56,9 @@
                 </div>
                 <div class="carousel-icon clearfix" id="carouselIcon">
                     <a class="current" href="javascript:;"></a>
+                    <a href="javascript:;"></a>
+                    <a href="javascript:;"></a>
+                    <a href="javascript:;"></a>
                     <a href="javascript:;"></a>
                     <a href="javascript:;"></a>
                 </div>
@@ -61,7 +73,7 @@
                     </div>
                 </li>
                 <li id="showOrg" data-status="0">门店</li>
-                <li class="product-filter" id="salesFilter">销量</li>
+                <li class="product-filter" id="salesFilter" data-status="1">销量</li>
                 <li class="arrow product-filter" id="categoryFilter"><p>类别<i></i></p>
                     <div style="display: none;">
                         <ul class="clearfix" id="categoryList">
