--- a/pay/orderDetails.html
+++ b/pay/orderDetails.html
@@ -88,9 +88,16 @@
             </div>
         </div> -->
         <div class="footer footer-sty06">
-            <ul class="clearfix">
+            <ul class="clearfix" id="paymentFooter">
                 <li id="payOrder">付款</li>
                 <li id="cancelOrder" class="disabled">取消订单</li>
+            </ul>
+            <ul class="clearfix" id="receiveFooter">
+                <li class="disabled" id="checklogistics"><a href="javascript:;">查看物流</a></li>
+            </ul>
+            <ul class="clearfix" id="commentFooter">
+                <li id="commitOrder"><a href="javascript:;">评价</a></li>
+                <li class="disabled" id="checklogistics"><a href="javascript:;">查看物流</a></li>
             </ul>
         </div>
     </div>
