--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 <div class="panel-overlay" style="display: none;"></div>
             </div>
         </div>
-        <div class="footer footer-sty01">
+        <div class="footer footer-sty01" id="footer">
             <ul class="clearfix">
                 <li><a href="./"><i class="icon-index-01"></i><span>首页</span></a></li>
                 <li><a href="./Views/Order/shopCart.html"><i class="icon-cart"></i><span>购物车</span></a></li>
