--- a/pay/orderDetails.html
+++ b/pay/orderDetails.html
@@ -13,6 +13,10 @@
     <link rel="stylesheet" href="../css/pages.css?v=2017020201" />
     <script src="../js/jquery-2.2.1.js"></script>
     <script src="../js/jquery.cookie.js"></script>
+
+    <link rel="stylesheet" href="../plugins/layer/mobile/need/layer.css">
+    <script src="../plugins/layer/mobile/layer.js"></script>
+    
     <script src="../js/common.js"></script>
 </head>
 
@@ -102,6 +106,7 @@
         </div>
     </div>
     <script src="../js/pages.js?v=2017020201?"></script>
+    <script src="../pay/wxPay.js?v=2017020201"></script>
     <script>
         toGetOrderDetails();
     </script>
