--- a/pay/waitPayment.html
+++ b/pay/waitPayment.html
@@ -13,6 +13,9 @@
     <link rel="stylesheet" href="../css/pages.css?v=2017020201" />
     <script src="../js/jquery-2.2.1.js"></script>
     <script src="../js/jquery.cookie.js"></script>
+
+    <link rel="stylesheet" href="../plugins/layer/mobile/need/layer.css">
+    <script src="../plugins/layer/mobile/layer.js"></script>
 </head>
 
 <body>
