确认收货和手机号码修改

--- a/pay/orderDetails.html
+++ b/pay/orderDetails.html
@@ -98,6 +98,7 @@
             </ul>
             <ul class="clearfix" id="receiveFooter">
                 <li class="disabled" id="checklogistics"><a href="javascript:;">查看物流</a></li>
+                <li id="confirmReceive"><a href="javascript:;">确认收货</a></li>
             </ul>
             <ul class="clearfix" id="commentFooter">
                 <li id="commitOrder"><a href="javascript:;">评价</a></li>
