手机验证等

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 </div>
             </div>
             <ul class="tab tab-sty01 clearfix">
-                <li class="arrow product-filter" id="cityFilter"><p>城市<i></i></p>
+                <li class="arrow product-filter" id="cityFilter"><p id="selectedCity">城市<i></i></p>
                     <div style="display: none;">
                         <ul class="clearfix" id="provinceList">
                         </ul>
