--- a/pay/orderDetails.html
+++ b/pay/orderDetails.html
@@ -83,22 +83,17 @@
                 </div>
             </div>
         </div>
-        <!-- <div class="overlay"></div>
-        <div class="alert-group">
-            <div class="l01 .alert-msg">这里是文字</div>
-            <div class="l02">
-                <a class="alert-confirm" href="javascript:;">确认</a>
-                <a class="alert-cancel" href="javascript:;">取消</a>
-            </div>
-        </div> -->
         <div class="footer footer-sty06">
             <ul class="clearfix" id="paymentFooter">
                 <li id="payOrder">付款</li>
                 <li id="cancelOrder" class="disabled">取消订单</li>
             </ul>
             <ul class="clearfix" id="receiveFooter">
-                <li class="disabled" id="checklogistics"><a href="javascript:;">查看物流</a></li>
                 <li id="confirmReceive"><a href="javascript:;">确认收货</a></li>
+                <li class="disabled" id="checklogistics"><a href="javascript:;">查看物流</a></li>
+            </ul>
+            <ul class="clearfix" id="urgeFooter">
+                <li class="disabled" id="urgeOrder">催发货</li>
             </ul>
             <ul class="clearfix" id="commentFooter">
                 <li id="commitOrder"><a href="javascript:;">评价</a></li>
